Added new endpoint to cancel grouped runs
